# user-wallet

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  update-version.js  user-wallet-public-key.asc  vite.config.dev-ui.ts  vite.config.ts
.github/workflows/: release.yml
binaries-site/: .gitignore  deployment-info.json
binaries-site/frontend/: index.html
docs/: CNAME  index.html
scripts/: setup-toolbox-link.js
src/: ErrorBoundary.tsx  RequestInterceptorWallet.ts  UserContext.tsx  UserInterface.tsx  WalletContext.tsx  config.ts  fetchProxy.ts  index.ts  main.tsx  onWalletReady.ts  preLoginRoutes.ts  theme.d.ts
src-tauri/: Cargo.toml  app.metanet.client.metainfo.xml  app.user.wallet.metainfo.xml  macos-info.plist  metanet-client.desktop  tauri.conf.json  tauri.ui-dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  priority.rs  tls.rs
src/components/: AccessAtAGlance.tsx  Action.tsx  AppLogo.tsx  DetailsSection.tsx  FiatRampDialog.tsx  FundingHandler.tsx  GuardarianRampDialog.tsx  Logo.tsx  PageLoading.tsx  Profile.tsx  RecentActions.tsx  RecoveryKeyHandler.tsx  SpendingAuthorizationList.tsx  Theme.tsx  ThemedToastContainer.tsx  UpdateManager.tsx  UserWalletApp.tsx
src/images/: darkMode.tsx  lightMode.tsx
src/navigation/: AuthRedirector.tsx  Menu.tsx  style.ts
src/types/: GroupedPermissions.ts
src/utils/: appCatalogCache.ts  arraysOfObjectsAreEqual.ts  changellyFiat.ts  clientFactories.ts  keyMaterial.ts  openUrl.ts  (+4 more)
(+49 files in other folders)
