[package]
name = "user-wallet"
version = "0.1.5"
description = "An example desktop wallet"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
url = "2"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.2"
rcgen = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
image = { version = "0.24", default-features = false, features = ["png"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
